tmp/manifests/alb-ingress-controller/inference-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference-server
  template:
    metadata:
      labels:
        app: inference-server
    spec:
      containers:
        - name: inference-server
          image: 540566440182.dkr.ecr.ap-northeast-2.amazonaws.com/inference-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
