tmp/manifests/alb-ingress-controller/api-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-api-server
spec:
  selector:
    app: demo-api-server
  type: ClusterIP
  ports:
    - port: 8383 # 서비스가 생성할 포트  
      targetPort: 8383 # 서비스가 접근할 pod의 포트
      protocol: TCP
