tmp/manifests/alb-ingress-controller/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-react-frontend
spec:
  selector:
    app: demo-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
