tmp/manifests/alb-ingress-controller/inference-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-server
spec:
  selector:
    app: inference-server
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
