tmp/manifests/alb-ingress-controller/wzcomparerr2-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wzcomparerr2server
spec:
  selector:
    app: wzcomparerr2server
  type: ClusterIP
  ports:
    - port: 7209
      targetPort: 7209
      protocol: TCP
