tmp/manifests/alb-ingress-controller/destinationrule_backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-backend
  namespace: default
spec:
  host: demo-api-server.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
