tmp/manifests/alb-ingress-controller/virtualservice-front-backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtualservice
  namespace: default
spec:
  gateways:
  - frontend-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: demo-api-server.default.svc.cluster.local
        port:
          number: 8383
  - route:
    - destination:
        host: demo-frontend.default.svc.cluster.local
